docs/7.54/md/abenabap_dynpros_value_help_mod.md
---
title: "Input Help in Dialog Modules"
description: |
  To define input helps in dialog modules, dialog modules can be called at POV time: PROCESS ON VALUE-REQUEST. ... FIELD field MODULE mod. ... After PROCESS ON VALUE-REQUEST(https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/dynpprocess.htm), the MODULE statement can only be used in combinat
version: "7.54"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_dynpros_value_help_mod.htm"
abapFile: "abenabap_dynpros_value_help_mod.htm"
keywords: ["select", "update", "do", "if", "try", "data", "types", "abenabap", "dynpros", "value", "help", "mod"]
---

* * *

AS ABAP Release 754, ©Copyright 2019 SAP SE. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap.htm) →  [ABAP − Reference](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_reference.htm) →  [SAP GUI User Dialogs](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_screens.htm) →  [General Dynpros](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_dynpros.htm) →  [Field Help, Input Help, and Dropdown List Boxes](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_dynpros_help.htm) →  [Input Help](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_dynpros_value_help.htm) → 

Input Help in Dialog Modules

To define input helps in dialog modules, dialog modules can be called at POV time:

PROCESS ON VALUE-REQUEST.
  ...
  FIELD field MODULE mod.
  ...

After [PROCESS ON VALUE-REQUEST](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/dynpprocess.htm), the MODULE statement can only be used in combination with the FIELD statement. When F4 is selected, the dialog module mod of the FIELD statement whose field field has the cursor. If multiple FIELD statements are specified for the same field field, only the first statement is executed. The dialog module mod does not provide the content of the dynpro field field, since this content is not transported by the FIELD statement at PROCESS ON HELP-REQUEST time. If the recommended [search helps](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abensearch_help_glosry.htm "Glossary Entry") and search help exits do not meet requirements, proposal lists for the input help can be programmed in this dialog module.

Function modules are available here that support both search helps and all other types of input help, and which also transport data between the dynpro and the ABAP program. These function modules are prefixed with F4IF\_. The most important are:

-   F4IF\_FIELD\_VALUE\_REQUEST

Calls the input help in ABAP Dictionary dynamically. The import parameters TABNAME and FIELDNAME can be used to pass the name of the component of a structure or database in ABAP Dictionary to the function module. The ABAP Dictionary input help defined for this component is called. All of the relevant dynpro fields are read. Any fields selected from the proposal list are either passed to the relevant input-enabled screen fields, if the import parameters DYNPPROG, DYNPNR, and DYNPROFIELD are specified, or passed back in the table parameter RETURN\_TAB.

-   F4IF\_INT\_TABLE\_VALUE\_REQUEST

This function module displays a proposal list created in the ABAP program. This list is passed to the function module in the table parameter VALUE\_TAB. The selection of the user is either passed to the relevant input-enabled screen fields, if the import parameters DYNPPROG, DYNPNR, and DYNPROFIELD are specified, or passed back in the table parameter RETURN\_TAB.

The additional function modules DYNP\_VALUES\_READ and DYNP\_VALUES\_UPDATE read and return dynpro fields at POV time. For further information, refer to the relevant function module documentation.

Executable Example

[Input Helps in Dialog Modules](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abendynpro_f4_help_dial_abexa.htm)